--- a/src/css/sass/_main.scss
+++ b/src/css/sass/_main.scss
@@ -2,4 +2,8 @@ html, body{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    font-size: 14px;
 }
