Style(variables): add small and large padding value

--- a/src/css/sass/_variables.scss
+++ b/src/css/sass/_variables.scss
@@ -31,8 +31,10 @@ Padding, Margin and Column Gap
 
 **/
 
-$v-padding: 10px;
-$h-padding: 10px;
+$v-s-padding: 10px;
+$h-s-padding: 10px;
+$v-l-padding: 20px;
+$h-l-padding: 20px;
 $column-gap: 20px;
 
 /** 
