--- a/src/components/atoms/button/styles.scss
+++ b/src/components/atoms/button/styles.scss
@@ -1,6 +1,7 @@
 @import '@sass/_variables.scss'; 
 
 .button{
+   cursor: pointer;
    border: none;
    display: flex;
    justify-content: center;
