--- a/src/css/sass/_grid.scss
+++ b/src/css/sass/_grid.scss
@@ -1,8 +1,8 @@
 /**
 
-Use grid-(xs, sm, md, lg)-col-(1,2,3,...,12) to create grid column with different width Example: grid-sm-col-1
+Use grid-(xs, sm, md, lg)-col-(1,2,3,...,12) to create grid column with different width Example: grid-sm-col--1
 
-Use grid-span-(xs, sm, md, lg)-col-(1,2,3,...,12) to expand grid column width Example: grid-span-sm-col-1
+Use grid-span-(xs, sm, md, lg)-col-(1,2,3,...,12) to expand grid column width Example: grid-span-sm-col--1
 
 **/
 
