Style(button): change button space in medium and large

--- a/src/components/atoms/button/styles.scss
+++ b/src/components/atoms/button/styles.scss
@@ -43,9 +43,9 @@
 }
 
 .button.medium{
-   padding: $v-spacing;
+   padding: 2 * $v-spacing;
 }
 
 .button.large{
-   padding: $v-spacing 2 * $v-spacing;
+   padding: 4 * $v-spacing;
 }
