--- a/src/components/molecules/listItem/styles.scss
+++ b/src/components/molecules/listItem/styles.scss
@@ -1,7 +1,8 @@
 @import '@sass/_variables.scss';
 
 .list-item{
-    width: 100%;
     border-bottom: 1px solid $border-color;
     padding: $v-spacing;
+    align-items: center;
+    justify-items: center;
 }
