--- a/src/components/templates/layout/styles.scss
+++ b/src/components/templates/layout/styles.scss
@@ -14,11 +14,16 @@
     justify-content:center;
 }
 
-.main {
+.main-wrapper{
     flex-grow: 1;
     display: flex;
-    align-items: center;
     justify-content:center;
+}
+
+.main {
+    width: 100%;
+    padding: $v-spacing;
+    max-width: $max-width;
 }
 
 .footer{
