--- a/src/css/sass/_main.scss
+++ b/src/css/sass/_main.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 html, body{
     margin: 0px;
     padding: 0px;
@@ -6,4 +8,8 @@ html, body{
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
     font-size: 14px;
+}
+
+hr {
+  border-bottom: 1px solid $border-color; 
 }
