Feat(contactRecords): add link and change property name Feat(listItem): add avatar and change property name Style(toolbar)

--- a/src/components/molecules/toolbar/styles.scss
+++ b/src/components/molecules/toolbar/styles.scss
@@ -1,6 +1,9 @@
+@import '@sass/_variables.scss'; 
+
 .toolbar{
     width: 100%;
     display: flex;
+    padding-block: $v-spacing;
 }
 
 .toolbar .space{
